--- a/src/assets/errorMsg/errorMsg.less
+++ b/src/assets/errorMsg/errorMsg.less
@@ -1,5 +1,43 @@
+body,html{
+  height: 100%;
+  #root{
+    height: 100%;
+
+    >div{
+      height: 100%;
+      .stick-top{
+        position: fixed;
+        top:0;
+        z-index: 1;
+        width: 100%;
+      }
+      .contentWarp{
+        margin: 50px 0;
+      }
+      .footerWarp{
+        position: fixed;
+        bottom:0;
+        width: 100%;
+      }
+    }
+  }
+
+}
 .errorMsg {
   text-align: center;
   line-height: 100%;
   color: red;
+}
+.errorPath {
+  width: 100%;
+  height: 100%;
+  color: red;
+  font-size: 80px;
+  p{
+    margin: 0;
+    padding:0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
