--- a/src/assets/errorMsg/errorMsg.less
+++ b/src/assets/errorMsg/errorMsg.less
@@ -1,14 +1,10 @@
 body,html{
-  height: 100%;
   #root{
-    height: 100%;
-
     >div{
-      height: 100%;
       .stick-top{
         position: fixed;
         top:0;
-        z-index: 1;
+        z-index: 10;
         width: 100%;
       }
       .contentWarp{
@@ -40,4 +36,19 @@ body,html{
     top: 50%;
     transform: translateY(-50%);
   }
+}
+#chat-page .chat-me .am-list-extra {
+  flex-basis: auto;  /*宽度包裹内容*/
+}
+#chat-page .chat-me .am-list-content {
+  padding-right: 15px;
+  text-align: right;
+}
+/*固定在底部*/
+.am-tab-bar {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: inherit;
+  z-index: 10;
 }
